<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_gravity="bottom">
    
    <!-- 第一排TextView显示三个文本 -->
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:id="@+id/ll_rocket"
           android:drawableTop="@drawable/icon_rocket"
           style="@style/homeitem"
           android:text="@string/rocket"/> 
       <TextView
           android:id="@+id/ll_softmgr"
           android:drawableTop="@drawable/icon_softmgr"
           style="@style/homeitem"
           android:text="@string/softmgr"/> 
       <TextView
           android:id="@+id/ll_phonemgr"
           android:drawableTop="@drawable/icon_phonemgr"
           style="@style/homeitem"
           android:text="@string/phonemgr"/>
       </LinearLayout>
       
       <!-- 第二排TextView显示三个文本 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ll_telmgr"
           android:drawableTop="@drawable/icon_telmgr"
           style="@style/homeitem"
           android:text="@string/telmgr"/> 
        <TextView
            android:id="@+id/ll_filemgr"
           android:drawableTop="@drawable/icon_filemgr"
           style="@style/homeitem"
           android:text="@string/filemgr"/> 
        <TextView
            android:id="@+id/ll_sdclean"
           android:drawableTop="@drawable/icon_sdclean"
           style="@style/homeitem"
           android:text="@string/sdclean"/> 
        </LinearLayout>
</LinearLayout>
