<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeadActivity" >
    <!-- ViewPager 控件 -->
    <TextView 
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/leadskip_marginright"
        android:layout_marginTop="@dimen/leadskip_margintop"
        android:textStyle="bold"
        android:textSize="20sp"
        android:clickable="true"
        android:text="@string/lead_skiptext"/>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@id/tv_skip">
    </android.support.v4.view.ViewPager>
    
    <!-- 三个icon图标 -->       
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/leadicons_marginbottom" >
        <ImageView 
        android:id="@+id/icon1"
        android:layout_width="@dimen/leadicons_width"
        android:layout_height="@dimen/leadicons_height"
        android:layout_margin="@dimen/leadicons_margin"
        android:contentDescription="@string/leadtext_description1"
        android:src="@drawable/adware_style_default"/>
        
        <ImageView 
        android:id="@+id/icon2"
        android:layout_width="@dimen/leadicons_width"
        android:layout_height="@dimen/leadicons_height"
        android:layout_margin="@dimen/leadicons_margin"
        android:contentDescription="@string/leadtext_description2"
        android:src="@drawable/adware_style_default"/>
        
        <ImageView 
        android:id="@+id/icon3"
        android:layout_width="@dimen/leadicons_width"
        android:layout_height="@dimen/leadicons_height"
        android:layout_margin="@dimen/leadicons_margin"
        android:contentDescription="@string/leadtext_description3"
        android:src="@drawable/adware_style_default"/>
    </LinearLayout>

</RelativeLayout>